# cmd-ime

./: .gitignore  AGENTS.md  ARCHITECTURE.md  AppIcon.icns  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  VISION.md  appcast.xml  docker-compose.yml  justfile  manifest.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  workspace.yaml
.airis/: generated.toml  snapshots.toml
.airis/backups/: justfile.2025-11-20.txt  package.json.2025-11-20.json  pnpm-workspace.yaml.2025-11-20.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci.yml  release.yml
apps/cmd-ime-rust/: package.json
apps/cmd-ime-rust/src/: main.js  main.spec.js
apps/cmd-ime-rust/src-tauri/: Cargo.toml
apps/cmd-ime-rust/src-tauri/src/: event_tap.rs  ime.rs  lib.rs  main.rs  settings.rs
apps/cmd-ime-swift/: .swiftlint.yml  Package.resolved  Package.swift  TEST_REPORT.md
apps/cmd-ime-swift/Sources/CmdIMERuntime/: shim.c
apps/cmd-ime-swift/Sources/CmdIMESwift/: AppData.swift  AutoSwitcher.swift  BundleWatcher.swift  CmdIMEApp.swift  CmdImeRuntime.swift  ExclusionAppsController.swift  KeyEvent.swift  KeyMapping.swift  KeyMappings.swift  KeyTextField.swift  KeyboardShortcut.swift  LoginItemManager.swift  Models.swift  (+11 more)
apps/cmd-ime-swift/scripts/: build_app.sh  generate-self-signed-cert.sh  install-local.sh  package.sh
apps/landing/app/: page.tsx
cmd-ime-rust/: build.sh  package.json
cmd-ime-rust/src-tauri/: tauri.conf.json
cmd-ime-rust/src-tauri/src/: event_tap.rs  ime.rs  settings.rs
(+16 files in other folders)
