[package]
name = "cmd-ime-rust"
version = "0.1.0"
description = "Native backend for ⌘IME"
authors = ["you"]
edition = "2021"

[lib]
name = "cmd_ime_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
once_cell = "1.19"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
cocoa = "0.26"
objc = "0.2"
objc-foundation = "0.1"

[dev-dependencies]
tempfile = "3"
